...
        statusLabel.text = "---";
    }
    
    @IBAction
    func startStop() {
        if pcd.running {
            startStopButton.setTitle("Start", forState: UIControlState.Normal)
            startStopButton.titleLabel?.text = "Start"
            pcd.stop()
            statusLabel.text = "---";
        } else {
            startStopButton.setTitle("Stop", forState: UIControlState.Normal)
            statusLabel.text = "Starting...";
...
